--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "nodemon ./start.js",
-    "start": "nodemon ./start.js"
+    "start": "nodemon node start.js"
   },
   "keywords": [],
   "author": "Suheal",
