--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "nodemon ./start.js",
+    "start-server": "node start.js",
     "start": "nodemon node start.js"
   },
   "keywords": [],
