--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "nodemon ./start.js",
     "start-server": "node ./start.js",
-    "start": "nodemon node ./start.js"
+    "start": "node ./start.js"
   },
   "keywords": [],
   "author": "Suheal",
